feat(domain): add patient class

--- a/back.patient/src/main/resources/application.properties
+++ b/back.patient/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+logging.level.org.springframework=INFO
+
+################### DataSource Configuration ##########################
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microserviceback
+spring.datasource.username=root
+spring.datasource.password=Vivelamousse2!
+
+################### Hibernate Configuration ##########################
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
 
