--- a/back.patient/src/main/resources/application.properties
+++ b/back.patient/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=Vivelamousse2!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
 
